--- a/css/main.css
+++ b/css/main.css
@@ -103,160 +103,57 @@ textarea {
    Author's custom styles
    ========================================================================== */
 body{
+  display: block;
   font-family: sans-serif;
-  line-height: 1.5;
 
 }
 
-img{
-  max-width: 100%;
-  display: block;
-}
-
-
-.main-nav{
-  display: none;
-}
-
-.page-header{
-  position: relative;
-  padding: 1em;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  background-color: blue;
-  color: #fff;
-}
-
-.page-header h1{
-  margin: 0;
-  font-size: 1.5em;
-  line-height: 1;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-.page-header .nav-icon{
-  cursor: pointer;
-  position: absolute;
-  left: 1em;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.main-content{
-  margin: 3em auto;
-  padding: 1em;
-  max-width: 960px;
-}
-
-.main-nav{
-  display: none;
-  position: relative;
-  background-color: purple;
-  color: red;
-  font-weight: bold;
-}
-
-.main-nav ul{
-  margin-top: 1.5em;
-  list-style: none;
-}
-
-.main-nav li{
-  margin: 1em 0;
-}
-
-.main-nav a{
-  color: red;
+a{
   text-decoration: none;
+  color: #000;
 }
 
-.main-nav .close-icon{
-  font-style: normal;
-  position: absolute;
-  top: .9rem;
-  right: 1em;
-  line-height: 1;
-  color: red;
+a:hover{
   cursor: pointer;
 }
 
-.main-nav li{
-  border:1px solid yellow:
-}
-
-.main-nav li.active:before{
-content: '';
-display: block;
-border: .5rem solid red;
-border-top-color: transparent;
-border-bottom-color: transparent;
-border-right-color: transparent;
-position: absolute;
-left: -.75em;
-top: 50%;
-transform: translateY(-50%);
-}
-
-.nav-open{
-  overflow: hidden;
-}
-
-.nav-open .main-nav{
+header{
   display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border: 1px solid red;
-  width: 50%;
-  min-height: 100%;
+  margin: .5em;
+
 }
 
-.nav-open .page-content{
-  border: 1px solid purple;
-  transform: translateX(50%);
+header img{
+  width: .9em;
 }
 
-.nav-open .page-content:before{
-  content: '';
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-color: hsla(1, 99%, 50%, 0.5);
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 150;
+ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
 }
 
+li{
+  display: inline-block;
+}
+
+.col-7-left{
+
+}
+
+.col-7-right{
 
 
+}
 
+.arrow-left{
+  position: relative;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.fa-chevron-left{
+  position: abolute:
+}
 
 /* ==========================================================================
    Helper classes
