--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,13 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
+@font-face {
+       font-family: 'ITC Clearface Std';
+       src: url('ClearfaceStd-Regular.woff2') format('woff2'),
+           url('ClearfaceStd-Regular.woff') format('woff');
+       font-weight: 500;
+       font-style: normal;
+     }
 
 html {
     box-sizing: border-box;
@@ -187,6 +194,7 @@ li{
   display: block;
   margin: 0 auto;
   text-align: center;
+  max-width: 50em;
 }
 
 .accro-section{
@@ -198,11 +206,17 @@ li{
 }
 
 .header-info{
-  margin: 0 auto;
+  margin: 2em auto;
   text-align: center;
-  font-size: 3em;
+  font-size: 4em;
   line-height: 1;
   max-width: 14em;
+  display: none;
+}
+
+.header-info-copy{
+  margin: .25em 0;
+  padding: .5em 1.5em;
 }
 
 .slide-numbers-vf{
@@ -212,7 +226,13 @@ li{
   width: 10%;
 }
 
+#header-lc{
+  font-family: "ClearfaceStd-Regular", serif;
+}
 
+.project-acro, .project-slide-no{
+  font-family: "ClearfaceStd-Regular", serif;
+}
 
 /*BEGIN BOTTOM NAVAGATION ---------------------*/
 
@@ -247,6 +267,10 @@ li{
   overflow: auto;
   margin: 0 auto;
   padding: 1em 2em;
+}
+
+.project-info a:hover{
+  text-decoration: underline;
 }
 
 .copy-padding{
