--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,12 @@
 
 html {
     box-sizing: border-box;
-    color: #222;
+    margin: 0;
+    height: 100%;
+    width: 100%;
     font-size: 1em;
-    line-height: 1.4;
     cursor: crosshair;
+
 }
 
 *, *:before, *:after{
@@ -111,10 +113,6 @@ textarea {
    Author's custom styles
    ========================================================================== */
 body{
-  box-sizing: border-box;
-  display: block;
-  margin: 0 auto;
-  position: relative;
   font-family: "nimbus-sans-condensed", sans-serif;
 
 }
@@ -184,25 +182,27 @@ li{
 .view-finder{
   display: block;
   position: relative;
-  height: 40em;
+  height: 38em;
   margin: .5em auto;
   padding: 0 4em;
   overflow: auto;
 }
 
-.view-finder img, .view-finder p{
-  display: block;
-  margin: 0 auto;
+.view-finder img{
+  position: fixed;
+  top: 15%;
+  left: 20%;
+  padding: 1em;
   text-align: center;
   max-width: 50em;
 }
 
 .accro-section{
-  position: absolute;
-  top: 50%;
-  width: 10%;
+  position: fixed;
+  top: 45%;
+  left: 7%;
+  padding: 1em;
   height: 100%;
-  padding: 2em;
 }
 
 .header-info{
@@ -219,19 +219,26 @@ li{
   padding: .5em 1.5em;
 }
 
-.slide-numbers-vf{
-  position: absolute;
-  top: 50%;
-  right: 0em;
-  width: 10%;
-}
-
 #header-lc{
   font-family: "ClearfaceStd-Regular", serif;
 }
 
 .project-acro, .project-slide-no{
+  display: none;
   font-family: "ClearfaceStd-Regular", serif;
+  font-size: 1.5em;
+}
+
+.project-image{
+  display: none;
+}
+
+.project-title-body{
+  position: fixed;
+  font-size: 4em;
+  text-align: center;
+  top: 2px;
+  color: #000;
 }
 
 /*BEGIN BOTTOM NAVAGATION ---------------------*/
@@ -254,7 +261,8 @@ li{
 
 .project-nav li{
   font-size: 1.5em;
-  padding: 0 .25em;
+  padding: 0 .3em;
+  text-decoration: none;
 }
 
 .project-header-center{
@@ -269,13 +277,17 @@ li{
   padding: 1em 2em;
 }
 
-.project-info a:hover{
-  text-decoration: underline;
-}
-
 .copy-padding{
   padding-bottom: 1.4em;
   height: 2.85em;
+}
+
+.slide-numbers-vf{
+  position: fixed;
+  top: 45%;
+  right: 7%;
+  height: 100%;
+  padding: 1em;
 }
 
 
