--- a/css/main.css
+++ b/css/main.css
@@ -112,9 +112,11 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+
+
 body{
   font-family: "nimbus-sans-condensed", sans-serif;
-
+  font-size: 1vw;
 }
 
 a{
@@ -126,9 +128,19 @@ a:hover{
   cursor: pointer;
 }
 
-header{
-  margin: .5em;
-  padding: .25em 1.75em;
+header ul{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 0;
+  padding: .45em 1.2em;
+}
+
+header #header-information{
+  text-align: right;
+}
+
+#header-lc{
+  font-family: "ClearfaceStd-Regular", serif;
 }
 
 header img{
@@ -137,7 +149,18 @@ header img{
 }
 
 header ul{
-    font-size: 2em;
+    font-size: 2.25em;
+}
+
+.header-info{
+  display: none;
+}
+
+.header-info-copy{
+  padding: 1em;
+  text-align: center;
+  font-size: 4em;
+  line-height: 1;
 }
 
 ul{
@@ -150,149 +173,93 @@ li{
   display: inline-block;
 }
 
-.col-7-left{
-  width: 20%;
-  float: left;
-}
-
-.col-7-center{
-  width: 55%;
-  text-align: center;
-}
-
-.col-7-right{
-  width: 20%;
-  float: right;
-  text-align: right;
-}
-
-
 .arrow-left{
   position: absolute;
-  top: 40%;
-  left: 2em;;
+  top: 42%;
+  left: 2.25em;
+  font-size: 1.25vw;
 }
 
 .arrow-right{
   position: absolute;
-  top: 40%;
-  right: 2em;
+  top: 42%;
+  right: 2.25em;
+  font-size: 1.25vw;
 }
 
 .view-finder{
-  display: block;
   position: relative;
-  height: 38em;
-  margin: .5em auto;
-  padding: 0 4em;
-  overflow: auto;
+  height: 68vh;
 }
 
 .view-finder img{
-  position: fixed;
-  top: 15%;
-  left: 20%;
-  padding: 1em;
-  text-align: center;
-  max-width: 50em;
-}
-
-.accro-section{
-  position: fixed;
-  top: 45%;
-  left: 7%;
-  padding: 1em;
-  height: 100%;
-}
-
-.header-info{
+  display: block;
   margin: 2em auto;
+  max-width: 55em;
+  padding: 1em;
   text-align: center;
-  font-size: 4em;
-  line-height: 1;
-  max-width: 14em;
-  display: none;
-}
-
-.header-info-copy{
-  margin: .25em 0;
-  padding: .5em 1.5em;
-}
-
-#header-lc{
-  font-family: "ClearfaceStd-Regular", serif;
-}
-
-.project-acro, .project-slide-no{
-  display: none;
-  font-family: "ClearfaceStd-Regular", serif;
-  font-size: 1.5em;
 }
 
 .project-image{
   display: none;
-}
 
-.project-title-body{
-  position: fixed;
-  font-size: 4em;
-  text-align: center;
-  top: 2px;
-  color: #000;
 }
-
-/*BEGIN BOTTOM NAVAGATION ---------------------*/
 
 .project-nav{
-  display: block;
-  width: 100%;
-  margin: 0 auto;
-  padding: .5em;
+  display: grid;
+  position: fixed;
+  bottom: 0em;
+  grid-template-columns: repeat(4, 25vw);
+  grid-row: 3;
+  padding: .25em 1em;
+
 }
 
-.project-nav h3{
-  margin: 0 auto;
-  padding: .25em;
+.project-info{
+  font-size: 1.25em;
+  line-height: 1;
+  padding: 1em 1.5em;
+}
+
+.project-info h3{
   font-weight: normal;
-  font-size: 1.5em;
   text-transform: uppercase;
-  line-height: 1.125;
+  margin: 0;
+  padding: .5em 0;
 }
 
-.project-nav li{
-  font-size: 1.5em;
-  padding: 0 .3em;
-  text-decoration: none;
+.project-info-no li{
+  font-size: 1.25em;
+  padding-right: .5em;
 }
 
 .project-header-center{
   text-align: center;
 }
 
-.project-info{
-  width: 23%;
-  display: inline-block;
-  overflow: auto;
+.project-statement{
+  display: block;
   margin: 0 auto;
-  padding: 1em 2em;
+  font-size: 2.25em;
+  text-align: center;
+  line-height: 1;
+  max-width: 20em;
 }
 
-.copy-padding{
-  padding-bottom: 1.4em;
-  height: 2.85em;
+.accro-section{
+  display: none;
+  position: absolute;
+  top: 20%;
+  left: 2em;
 }
 
-.slide-numbers-vf{
-  position: fixed;
-  top: 45%;
-  right: 7%;
-  height: 100%;
-  padding: 1em;
+.project-accro{
+  display: block;
 }
 
 
 
-/* ==========================================================================
+ ==========================================================================
    Helper classes
    ========================================================================== */
 
@@ -463,4 +430,5 @@ li{
     h3 {
         page-break-after: avoid;
     }
-}
+
+    @supports (grid-area: auto){}
