--- a/css/main.css
+++ b/css/main.css
@@ -257,13 +257,14 @@ li{
 }
 
 .project-statement{
-  position: fixed
+  position: fixed;
   display: block;
-  transform: translate( 50%, -50%;);
   width: 25em;
+  margin: 1em;
   font-size: 2.25em;
   text-align: center;
   line-height: 1;
+  transform: translate(-50% , -50%);
 }
 
 .accro-section{
@@ -288,64 +289,6 @@ li{
   text-decoration: underline;
 }
 
-
- ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers
- */
-
-.hidden {
-    display: none !important;
-}
-
-/*
- * Hide only visually, but have it available for screen readers:
- * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- *
- * 1. For long content, line feeds are not interpreted as spaces and small width
- *    causes content to wrap 1 word per line:
- *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-    white-space: nowrap; /* 1 */
-}
-
-/*
- * Extends the .visuallyhidden class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-    white-space: inherit;
-}
-
-/*
- * Hide visually and from screen readers, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
-}
 
 /*
  * Clearfix: contain floats
@@ -460,5 +403,3 @@ li{
     h3 {
         page-break-after: avoid;
     }
-
-    @supports (grid-area: auto){}
